功能已基本全部实现 就是样子有点丑

--- a/css/jquery.select.css
+++ b/css/jquery.select.css
@@ -1,3 +1,10 @@
-.pos {
-	position: absolute;
+.selectDiv{
+	overflow: auto;
+	overflow-x: hidden;
+}
+
+.searchInput {
+	margin-left: 5px;
+	margin-top: 5px;
+	display: block;
 }
